// proto/v1/common/common.proto
syntax = "proto3";

package market.common.v1;
option go_package = "github.com/YaganovValera/analytics-system/proto/v1/common;commonpb";

import "google/protobuf/empty.proto";

// ErrorCode defines standard error codes for streaming operations.
enum ErrorCode {
  OK = 0;
  UNAVAILABLE = 1;
  INTERNAL = 2;
  TIMEOUT = 3;
  INVALID_ARGUMENT = 4;
  UNAUTHORIZED = 5;
}

// StreamError represents an error in a data stream.
message StreamError {
  ErrorCode code = 1;
  string message = 2;
}

// AggregationInterval specifies intervals for historical data aggregation.
enum AggregationInterval {
  AGG_INTERVAL_UNSPECIFIED = 0;
  AGG_INTERVAL_1_MINUTE    = 1;
  AGG_INTERVAL_5_MINUTES   = 2;
  AGG_INTERVAL_15_MINUTES  = 3;
  AGG_INTERVAL_1_HOUR      = 4;
  AGG_INTERVAL_4_HOURS     = 5;
  AGG_INTERVAL_1_DAY       = 6;
}

// Pagination parameters for paginated requests.
message Pagination {
  int32 page_size   = 1;  // Maximum number of items to return
  string page_token = 2;  // Token for the next page
}

// Response for symbol discovery.
message ListSymbolsResponse {
  repeated string symbols        = 1;  // Available trading symbols
  string           next_page_token = 2;  // Token for next page of symbols
}

// CommonService provides discovery and utility methods.
service CommonService {
  // Lists available trading symbols with pagination.
  rpc ListSymbols(google.protobuf.Empty) returns (ListSymbolsResponse);
}

